--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,19 @@ services:
     name: saikrishna-portfolio-website
     env: python
     plan: free
+
     buildCommand: |
       pip install -r requirements.txt
       npm install
       npx tailwindcss -i ./static/css/main.css -o ./static/dist/build_styles.css --minify
       python manage.py collectstatic --noinput
+
     startCommand: gunicorn myproject.wsgi:application
+
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: myproject.settings
+      - key: SECRET_KEY
+        sync: false
+      - key: DEBUG
+        value: False
